# NE213_Analysis

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-single-platform.yml
include/: PSDAnalyzer.h  QtPlotter.h  Statistics.h  WaveformData.h  WaveformProcessor.h
python/: DataVisualization.py  Experimental_LecroyWaveAce2024.py
python/DataVisualization/: NE213_ML_Analyzer.py
scripts/: install_deps.sh
src/: PSDAnalyzer.cpp  QtPlotter.cpp  Statistics.cpp  WaveformData.cpp  WaveformProcessor.cpp
